crates/deadline-cli/tests/snapshots/cli_queue_resources__queue_get_storage_profile_prints_details.snap
---
source: crates/deadline-cli/tests/cli_queue_resources.rs
info:
  program: deadline
  args:
    - queue
    - get-storage-profile
    - "--storage-profile-id"
    - sp-001
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:54371"
    AWS_ENDPOINT_URL_STS: "http://localhost:54371"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpGCHfzP/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpGCHfzP
---
success: true
exit_code: 0
----- stdout -----
storageProfileId: sp-001
displayName: Linux Profile
osFamily: LINUX
fileSystemLocations:
- name: Project
  path: /mnt/project
  type: LOCAL


----- stderr -----
